// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtTextarea should render default AtTextarea 1`] = `
<view
  class="at-textarea at-textarea--WEB"
>
  <textarea
    autofocus="false"
    class="at-textarea__textarea"
    cursorspacing="100"
    fixed="false"
    maxlength="200"
    placeholder=""
    placeholderclass="[object Object]"
    placeholderstyle=""
    showconfirmbar="false"
    style="height: 2.1334rem;"
  />
  <view
    class="at-textarea__counter"
  >
    0 / 200
  </view>
</view>
`;

exports[`AtTextarea should render prop -- class 1`] = `
<view
  class="test at-textarea at-textarea--WEB test"
>
  <textarea
    autofocus="false"
    class="at-textarea__textarea"
    cursorspacing="100"
    fixed="false"
    maxlength="200"
    placeholder=""
    placeholderclass="[object Object]"
    placeholderstyle=""
    showconfirmbar="false"
    style="height: 2.1334rem;"
  />
  <view
    class="at-textarea__counter"
  >
    0 / 200
  </view>
</view>
`;

exports[`AtTextarea should render prop -- count 1`] = `
<view
  class="at-textarea at-textarea--WEB"
>
  <textarea
    autofocus="false"
    class="at-textarea__textarea"
    cursorspacing="100"
    fixed="false"
    maxlength="200"
    placeholder=""
    placeholderclass="[object Object]"
    placeholderstyle=""
    showconfirmbar="false"
    style="height: 2.1334rem;"
  />
  <!---->
</view>
`;

exports[`AtTextarea should render prop -- height 1`] = `
<view
  class="at-textarea at-textarea--WEB"
>
  <textarea
    autofocus="false"
    class="at-textarea__textarea"
    cursorspacing="100"
    fixed="false"
    maxlength="200"
    placeholder=""
    placeholderclass="[object Object]"
    placeholderstyle=""
    showconfirmbar="false"
    style="height: 64rem;"
  />
  <view
    class="at-textarea__counter"
  >
    0 / 200
  </view>
</view>
`;

exports[`AtTextarea should render prop -- maxLength 1`] = `
<view
  class="at-textarea at-textarea--WEB"
>
  <textarea
    autofocus="false"
    class="at-textarea__textarea"
    cursorspacing="100"
    fixed="false"
    maxlength="300"
    placeholder=""
    placeholderclass="[object Object]"
    placeholderstyle=""
    showconfirmbar="false"
    style="height: 2.1334rem;"
  />
  <view
    class="at-textarea__counter"
  >
    0 / 300
  </view>
</view>
`;

exports[`AtTextarea should render prop -- placeholder 1`] = `
<view
  class="at-textarea at-textarea--WEB"
>
  <textarea
    autofocus="false"
    class="at-textarea__textarea"
    cursorspacing="100"
    fixed="false"
    maxlength="200"
    placeholder="test"
    placeholderclass="[object Object]"
    placeholderstyle=""
    showconfirmbar="false"
    style="height: 2.1334rem;"
  />
  <view
    class="at-textarea__counter"
  >
    0 / 200
  </view>
</view>
`;

exports[`AtTextarea should render prop -- style 1`] = `
<view
  class="at-textarea at-textarea--WEB"
  style="color: red;"
>
  <textarea
    autofocus="false"
    class="at-textarea__textarea"
    cursorspacing="100"
    fixed="false"
    maxlength="200"
    placeholder=""
    placeholderclass="[object Object]"
    placeholderstyle=""
    showconfirmbar="false"
    style="height: 2.1334rem;"
  />
  <view
    class="at-textarea__counter"
  >
    0 / 200
  </view>
</view>
`;

exports[`AtTextarea should render prop -- value 1`] = `
<view
  class="at-textarea at-textarea--WEB"
>
  <textarea
    autofocus="false"
    class="at-textarea__textarea"
    cursorspacing="100"
    fixed="false"
    maxlength="200"
    placeholder=""
    placeholderclass="[object Object]"
    placeholderstyle=""
    showconfirmbar="false"
    style="height: 2.1334rem;"
  />
  <view
    class="at-textarea__counter"
  >
    4 / 200
  </view>
</view>
`;
